--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ Version:        0.0.1
 
 @import url("../toolbox/style.css");
 @import url("css/bootstrap.min.css");
-@import url("http://cachedcommons.org/cache/960/0.0.0/stylesheets/960-min.css");
+@import url("css/960-min.css");
 /*@import url(http://fonts.googleapis.com/css?family=Sniglet:800);*/
 /*
 COLORS:
