--- a/style.css
+++ b/style.css
@@ -102,13 +102,13 @@ body {background: #f3f3f3;font-family:sans-serif;}
 #branding nav a {
     display: block;
     line-height: 2em;
-    padding: 0 1em;
+    padding: 0 .5em;
     text-decoration: none;
     background: #3F636B;
     color: #DDF4FB;
     text-transform: uppercase;
+    margin:0 2px;
 }
-#branding nav a { margin-right:2px;}
 #branding nav ul ul {
     box-shadow: 0 3px 3px rgba(0,0,0,0.2);
     -moz-box-shadow: 0 3px 3px rgba(0,0,0,0.2);
@@ -148,9 +148,9 @@ body {background: #f3f3f3;font-family:sans-serif;}
 .breadcrumb {border-radius: 0 0 3px 3px;}
 
 /* MAIN */
-#content {padding:20px 0;}
+#content {padding: 0;}
 #content nav {width:100%;}
-article {padding:20px;margin:10px auto; background:#fff; border-radius:5px; }
+article {padding:20px;margin:0 auto; background:#fff; border-radius:5px; }
 
 .post {background:#fff;border:1px solid #9BD28E;  }
 .post.sticky {border:5px solid #9BD28E;}
@@ -165,7 +165,7 @@ article {padding:20px;margin:10px auto; background:#fff; border-radius:5px; }
 .cistella {border:1px solid #D7BCED;}
 .cistella.sticky {border:5px solid #D7BCED;}
 .cistella a {color:#3B0466;font-weight:normal;text-decoration:none;}
-.hentry.cistella {padding:20px;margin:10px auto;}
+.hentry.cistella {padding:20px;}
 
 
 .home .post {max-height:200px;overflow:hidden;font-size:.9em;}
