--- a/style.css
+++ b/style.css
@@ -211,3 +211,6 @@ section#comments {padding:20px;margin:20px auto; background:#fff; border-radius:
 #commentform {margin-bottom:0px;}
 #commentform .actions {margin-top:0; padding-left:100px;}
 #commentform #cancel-comment-reply {float:right;}
+
+/* PROTECTED ICON */
+header span.icon-lock{ display:inline-block;background:transparent url(img/icon-lock.png) no-repeat center center;width:16px;height:1em;vertical-align:middle;}
