--- a/style.css
+++ b/style.css
@@ -213,4 +213,18 @@ section#comments {padding:20px;margin:20px auto; background:#fff; border-radius:
 #commentform #cancel-comment-reply {float:right;}
 
 /* PROTECTED ICON */
-header span.icon-lock{ display:inline-block;background:transparent url(img/icon-lock.png) no-repeat center center;width:16px;height:1em;vertical-align:middle;}
+header span.icon-lock{ display:inline-block; background:transparent url(img/icon-lock.png) no-repeat center center; 
+    width:16px;height:1em;vertical-align:middle;
+}
+/* Search form */
+#searchform {margin:0;}
+#searchform fieldset {padding:0; margin:0;}
+ #searchform input {float: left;}
+#searchform #searchsubmit {position:relative;float: right;font-size:9px;}
+#searchform #searchsubmit span {
+    position: absolute;
+    display:block;
+    text-indent:-999px;
+    overflow:hidden; background:transparent url(img/icon-search.png) no-repeat center center;
+    top:0;bottom:0;right:0;left:0;
+}
