--- a/style.css
+++ b/style.css
@@ -162,26 +162,35 @@ body {background: #F3F3F3 url(img/bg-body-hexagon.png) center bottom;font-family
 .home #main {padding-top: 20px;}
 article {padding:20px;margin:0 auto; background:#fff; border-radius:5px; border: 1px solid #DDD;}
 article img {max-width:100%;}
+
 .post {background:#fff;border:1px solid #9BD28E; margin-bottom: 20px;  }
 .post.sticky {border:5px solid #9BD28E;}
 .post a:hover {text-decoration:underline;color:#090;}
 .post a, .post a:visited {color:#115900;font-weight:normal;text-decoration:none;}
+.post .entry-title {color:#115900;}
 
 .recepta {border:1px solid #D3975D;}
 .recepta.sticky {border:5px solid #D3975D;}
 .recepta a {color:#472300;font-weight:normal;text-decoration:none;}
+.recepta .entry-title {color:#472300;}
 .hentry.recepta {padding:20px;margin:10px auto;}
 
 .cistella {border:1px solid #D7BCED;}
 .cistella.sticky {border:5px solid #D7BCED;}
 .cistella a {color:#3B0466;font-weight:normal;text-decoration:none;}
+.cistella .entry-title {color:#3B0466;}
 .hentry.cistella {padding:20px;margin-bottom: 20px;}
-
 
 .home .post {max-height:200px;overflow:hidden;font-size:.9em;}
 
 .home .post img {width:100%;}
 
+.entry-meta {color:#999; font-size:.9em;}
+header .entry-meta {margin-top: -16px;margin-bottom: -16px; text-align: right;}
+.archive header .entry-meta {margin-bottom: 0; text-align: left;}
+
+.recepta footer .pills a {background-color:#D3975D; text-shadow: 0 1px 1px rgba(0, 0, 0, 0.25); color:#FFF; }
+.recepta footer .pills a:hover {background-color:#472300;}
 /* SECONDARY */
 aside {padding:1em;margin-bottom:1em;background: #3F636B;border-radius:5px;}
 aside h1 {font-size: 1em; font-weight: bold; padding: 0; margin: 0; line-height: 1.5em; color: #DDF4FB;}
