--- a/style.css
+++ b/style.css
@@ -22,7 +22,10 @@ COLORS:
 * purple-dark : #3B0466;
 * purple-light: #D7BCED;
  */
-
+/* fix bootsrap */
+.pagination a,.pagination span{float:left;padding:0 14px;line-height:34px;border-right:1px solid;border-right-color:#ddd;border-right-color:rgba(0, 0, 0, 0.15);*border-right-color:#ddd;text-decoration:none;}
+.pagination a:hover,.pagination .active a, .pagination .current {background-color:#c7eefe;}
+.pagination .next a,.pagination .next {border:0;}
 /* Text meant only for screen readers */
 .screen-reader-text,
 .assistive-text {
