--- a/css/tpl-home.css
+++ b/css/tpl-home.css
@@ -1,24 +1,26 @@
 /* Featured slider ************************************************/
 #slider-container {
 	overflow: hidden;
-	width: 600px;
+	/*width: 600px;*/
 	height: 250px;
-	margin: 0 0 30px 0;
+	margin: 0;
 	}
 #slider {
 	overflow: hidden;
-	width: 580px;
+	/*width: 580px;*/
 	height: 230px;
 	}
 .feature {
 	overflow: hidden;
-	width: 560px;
+	/*width: 560px;*/
 	height: 210px;
 	padding: 10px 10px 0 10px;
+	margin: 0;
 	border: none !important;
 	}
 #slider-container a {
-	font-weight: bold;
+	/*font-weight: bold;*/
+	margin: 0;
 	}
 .feature img {
 	float: left;
