M : modificat descripcio del tema

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
-Theme Name:     wp Coop - localhost
-Theme URI:      http: //agusti.cat/
+Theme Name:     wp Coop - el Rusc
+Theme URI:      https://github.com/AgustiBelloc/wp-coop
 Description:    Tema per a el Rusc.
 Author:         Agustí Belloc
 Author URI:     http: //agusti.cat/
